# ref-builder

./: .gitignore  .releaserc  deepsource.toml  pyproject.toml  readme.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
assets/workflows/: call_add_accessions.yml  call_add_otu.yml  direct_update_ref.yml  init_sync_labels.yml
ref_builder/: __init__.py  build.py  cli.py  console.py  errors.py  events.py  index.py  lock.py  logging.py  logs.py  models.py  options.py  otu.py  paths.py  plan.py  repo.py  resources.py  schema.py  store.py  transaction.py  utils.py
ref_builder/cli/: event.py  events.py  isolate.py  main.py  otu.py  utils.py  validate.py
ref_builder/events/: __init__.py  base.py  isolate.py  loader.py  otu.py  repo.py  sequence.py
ref_builder/legacy/: checks.py  convert.py  handlers.py  models.py  repo.py  utils.py  validate.py
ref_builder/ncbi/: cache.py  client.py  models.py
ref_builder/otu/: create.py  isolate.py  models.py  modify.py  promote.py  update.py  utils.py  validate.py
ref_builder/snapshotter/: index.py  models.py  otu.py  snapshotter.py
tests/: conftest.py  factories.py  src_test_gen.py  test_add.py  test_build.py  test_console.py  test_factories.py  test_index.py  test_modify.py  test_plan.py  test_promote.py  test_repo.py  test_resources.py  test_transaction.py  test_update.py  test_utils.py
tests/__snapshots__/: test_add.ambr  test_build.ambr  test_console.ambr  test_factories.ambr  test_modify.ambr  test_plan.ambr  test_update.ambr
tests/cli/: test_event_commands.py  test_isolate_commands.py  test_otu_commands.py  test_print_commands.py  test_top_commands.py
tests/files/: reference.json  reference_v1.json  reference_with_indent.json  src_test_contents.json  src_test_gen.py
tests/fixtures/: factories.py  organism.py  providers.py  test_factories.py  utils.py
tests/legacy/: test_checks.py  test_handlers.py  test_models.py  test_repo.py  test_utils.py  test_validate.py
tests/ncbi/: test_cache.py  test_client.py  test_model.py  test_ncbi_cache.py  test_ncbi_client.py  test_ncbi_model.py
(+425 files in other folders)
