[tool.poetry]
name = "ref-builder"
version = "0.0.0"
description = ""
authors = ["Ian Boyes <igboyes@gmail.com>", "Shelley Gao"]
license = "MIT"
maintainers = ["Ian Boyes <igboyes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arrow = "^1.3.0"
click = "^8.1.7"
orjson = "^3.10.6"
pydantic = "^2.8.2"
requests = "^2.32.3"
rich = "^13.7.1"
structlog = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-socket = "^0.7.0"
pytest-structlog = "^1.0"
pytest-xdist = "^3.6.1"
ruff = "^0.5.2"
syrupy = "^4.6.1"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
